--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ compiler:
     - gcc
 
 install:
+    - sudo pip install cpp-coveralls --use-mirrors
     - sudo apt-get update -qq
     - sudo apt-get install -qq cmake
 
@@ -11,3 +12,6 @@ script:
     - cmake .
     - make
     - make test
+
+after_success:
+    - coveralls
