--- a/test.in
+++ b/test.in
@@ -1,12 +1,13 @@
 #!/bin/sh
 
-ID=$1
+CASE=$1
+ID=`echo ${CASE} | cut -d - -f 2`
 SRC=@PROJECT_SOURCE_DIR@
 BIN=@PROJECT_BINARY_DIR@
 
-EXEC=${BIN}/bin/${ID}
+EXEC=${BIN}/bin/${CASE}
 IN=${SRC}/data/${ID}.in
-OUT=${SRC}/data/${ID}.out
+OUT=${SRC}/data/${CASE}.out
 ANS=${SRC}/data/${ID}.ans
 
 ${EXEC} < ${IN} > ${OUT}
