--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,11 @@ script:
 
 after_success:
     - coveralls --exclude-pattern '.*CMake[^/]+\.c(?:pp)?'
+
+notifications:
+    webhooks:
+        urls:
+            - https://webhooks.gitter.im/e/d4ac611092a6de1b9db4
+        on_success: change  # options: [always|never|change] default: always
+        on_failure: always  # options: [always|never|change] default: always
+        on_start: false     # default: false
