--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env: CTEST_OUTPUT_ON_FAILURE=1
 install:
     - sudo pip install cpp-coveralls --use-mirrors
     - sudo apt-get update -qq
-    - sudo apt-get install -qq cmake
+    - sudo apt-get install -qq cmake python3-minimal
 
 script:
     - cmake . -DCMAKE_C_FLAGS='-O0 --coverage' -DCMAKE_CXX_FLAGS='-O0 --coverage'
