Andy: Skip the test case zsshen-526

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
 set(SKIP_CASES
     czchen-104
     zsshen-104
+    zsshen-526
 )
 
 file(GLOB all_src ${PROJECT_SOURCE_DIR}/src/*)
