--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,5 +42,7 @@ foreach(src ${all_src})
     list(FIND SKIP_CASES "${exec_name}" idx)
     if (${idx} EQUAL -1)
         add_test(test-${exec_name} ${PROJECT_BINARY_DIR}/test ${exec_name})
+    else()
+        add_test(test-${exec_name} ${PROJECT_BINARY_DIR}/test --skip ${exec_name})
     endif()
 endforeach()
