--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
     - make test
 
 after_success:
-    - coveralls --exclude-pattern '.*CMake[^/]+\.c(?:pp)?'
+    - coveralls
 
 notifications:
     webhooks:
