Revert "Remove exclude-pattern"
This reverts commit f08bb40f812955e05edd2f204cbb4d186f035af7.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
     - make test
 
 after_success:
-    - coveralls
+    - coveralls --exclude-pattern '.*CMake[^/]+\.c(?:pp)?'
 
 notifications:
     webhooks:
