--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: c
 
 compiler:
     - gcc
-    
+
 git:
   depth: 1
 
@@ -28,3 +28,6 @@ notifications:
         on_success: change  # options: [always|never|change] default: always
         on_failure: always  # options: [always|never|change] default: always
         on_start: false     # default: false
+
+    slack:
+        secure: c0AYxCRD90MWMEcrxWjnWxEeX4f5aIAJbcg8+07oOYwxTsIKITNG3xiKlTPbJuw8eePRUHysIkmF4EuDM4etasQMYUAtgGlOHaH8eTwFRMI2MAmU0gwOlb0wD1tKOi6YaN7ZF/XukZLytk2pZ55u4mNcBhqvHbjR0w66n0aYDo0=
