--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ git:
 env: CTEST_OUTPUT_ON_FAILURE=1
 
 install:
-    - sudo pip install cpp-coveralls --use-mirrors
+    - sudo pip install cpp-coveralls
     - sudo apt-get update -qq
     - sudo apt-get install -qq cmake python3-minimal
 
